# suite-common

./: HANDOFF.md  README.md  SPEC.md  TESTING-SPEC.md  justfile  meson.build
.github/workflows/: ci.yml
suite_common/: __init__.py  application.py  dialogs.py  fileio_base.py  oracles.py  test_helpers.py  webview.py  window.py
tests/: test_fileio.py
tests/fixtures/: PROVENANCE.md
